font weight of text after price.
the (tax included) part.

--- a/bhousesupport - newsite/sass/partials/_woocommerce.scss
+++ b/bhousesupport - newsite/sass/partials/_woocommerce.scss
@@ -4,3 +4,6 @@ input#nyp { // name your price input box.
 	max-width: 120px;
 	color: #222;
 }
+.price .pro_price_extra_info {  // tax included part.
+	font-weight: normal;
+}
