--- a/bhousesupport - newsite/css/style.css
+++ b/bhousesupport - newsite/css/style.css
@@ -1,4 +1,3 @@
-@import url("../flatsome/css/foundation.css");
 /*
 Theme Name: WoodlawnSupport
 Theme URI: http://flatsome.uxthemes.com/
@@ -8,6 +7,7 @@ Author URI: http: //www.reachmaine.com/
 Template: flatsome
 Version: 1.8
 */
+@import url("../flatsome/css/foundation.css");
 /* Colors ---------------------------------------------- */
 /* Typography ------------------------------------------ */
 /*--- Mobile sizes ---- */
@@ -33,6 +33,9 @@ Version: 1.8
 input#nyp {
   max-width: 120px;
   color: #222; }
+
+.price .pro_price_extra_info {
+  font-weight: normal; }
 
 .hide-laptop {
   display: none !important;
@@ -105,7 +108,7 @@ h2.tribe-events-page-title, h1.tribe-events-single-event-title {
   margin-bottom: 0px; }
 
 .woodlawn-section:nth-child(even) {
-  background-color: #f1e6d8;
+  background-color: #F1E6D8;
   padding-top: 10px;
   padding-bottom: 16px; }
 
@@ -130,7 +133,7 @@ aside.widget.widget_recent_entries li {
 
 .woodlawn-contact {
   padding: 10px;
-  background-color: #f1e6d8;
+  background-color: #F1E6D8;
   border: 1px solid #884935; }
   .woodlawn-contact input[name="your-name"], .woodlawn-contact input[name="your-email"] {
     max-width: 280px; }
@@ -206,7 +209,7 @@ table.woodlawn-photo-pricelist tr th, table.woodlawn-photo-pricelist tr td {
   text-align: center; }
 
 .ngg-galleryoverview .ngg-gallery-thumbnail img {
-  background-color: #f1e6d8;
+  background-color: #F1E6D8;
   border-color: #884935; }
 
 /* styling for tribe events & tribe events shortcode....
