--- a/bhousesupport - newsite/sass/partials/_tribe-events.scss
+++ b/bhousesupport - newsite/sass/partials/_tribe-events.scss
@@ -110,6 +110,10 @@
 	#tribe-events-content.tribe-events-list{
 		margin-bottom: 0px;
 	}
+	#tribe-events .button {
+		background: $woodlawn-secondary!important;
+		background-color: $woodlawn-secondary!important;
+	}
 	#tribe-bar-form .tribe-bar-submit input[type=submit] {
 		background-color: $woodlawn-secondary;
 	}
