--- a/bhousesupport - newsite/sass/style.scss
+++ b/bhousesupport - newsite/sass/style.scss
@@ -7,12 +7,12 @@ Author URI: http: //www.reachmaine.com/
 Template: flatsome
 Version: 1.8
 */
- 
+
 @import url("../flatsome/css/foundation.css");
 @import "partials/settings";
-@import "partials/print"; 
+@import "partials/print";
 @import "partials/woocommerce";
- 
+
 .hide-laptop {
 	display: none!important;
 	//height: 0px;
@@ -77,7 +77,7 @@ ul.header-nav li {
 		font-size: .6em;
 		padding-top: 10px;
 		padding-bottom: 10px;
-		
+
 	}
 	a {
 		color: $woodlawn-tertiary;
@@ -113,7 +113,7 @@ h2.tribe-events-page-title, h1.tribe-events-single-event-title {
 	padding-bottom: 16px;
 }
 
-.from_the_blog_comments { // hide comments on blog shortcode 
+.from_the_blog_comments { // hide comments on blog shortcode
 	display: none;
 	visibility: hidden;
 }
@@ -131,7 +131,7 @@ aside.widget.widget_recent_entries { // give recent entries some breathing room
 
 	.product-thumbnail img {
 		width: 90px!important;
-	} 
+	}
 	td.product-name {
 		padding-left: 10px!important;
 	}
@@ -149,7 +149,7 @@ aside.widget.widget_recent_entries { // give recent entries some breathing room
 		max-width: 280px;
 	}
 }
-// blog stuff 
+// blog stuff
 
 #content .page-inner > article.post { // trying to target ONLY single posts.
 	img {
@@ -163,7 +163,7 @@ aside.widget.widget_recent_entries { // give recent entries some breathing room
 	.post-date {
 		display: none;
 	}
-	
+
 
 }
 
@@ -210,7 +210,7 @@ table.woodlawn-photo-pricelist tr th, table.woodlawn-photo-pricelist tr td {
 
 	}
 }
-// gallery plugin 
+// gallery plugin
 .html5gallery-elem-img-1 {
 	a div {
 		position: inherit!important;
@@ -245,12 +245,24 @@ table.woodlawn-photo-pricelist tr th, table.woodlawn-photo-pricelist tr td {
 	}
 }
 
+#content #archiveList {
+  ul {
+    padding-left: 20px;
+  }
+}
+
+.textwidget #archiveList {
+  li {
+    font-size: .8em;
+  }
+}
+
 /**** FOOTER ****/
 .footer-1 {
 	border-top: 1px solid $woodlawn-primary;
 	border-bottom: 3px solid $woodlawn-primary;
 }
-@import "partials/nextgen"; 
-@import "partials/tribe-events"; 
+@import "partials/nextgen";
+@import "partials/tribe-events";
 /********** media - keep last **********/
-@import "partials/media"; 
+@import "partials/media";
