--- a/bhousesupport - newsite/sass/partials/_settings.scss
+++ b/bhousesupport - newsite/sass/partials/_settings.scss
@@ -1,17 +1,18 @@
 /* Colors ---------------------------------------------- */
 // Font Colors
 $linkcolor: #a62425;
-$titleFontColor:  #314c3e; 
-$reach_orange:  #f58220; 
+$titleFontColor:  #314c3e;
+$reach_orange:  #f58220;
 $facebook_blue: #3a589d;
-// Background colors: 
+// Background colors:
 
-$bkgoundContent: #FFFFFF; // 
+$bkgoundContent: #FFFFFF; //
 $menuBarbkg: #D14719; //
 $woodlawn-primary: #884935; // also set in theme options - red-brown (top bar, etc)
 $woodlawn-secondary: #314c3e; // set in theme options // forest green;
 $woodlawn-tertiary: #eed7bc; // I made this one up. // lt orange
 $woodlawn-light-bkg: #F1E6D8; // light beige, color of masthead (also set in theme options)
+$woodlawn-footer-font: #777;
 
 /* Typography ------------------------------------------ */
 $linkcolor: #a62425;
