--- a/bhousesupport - newsite/sass/partials/_tribe-events.scss
+++ b/bhousesupport - newsite/sass/partials/_tribe-events.scss
@@ -38,7 +38,7 @@
 		.tribe-events-event-image {
 			float: left;
 			margin-right: 10px;
-			max-width: 60%;
+			max-width: 40%;
 		}
 		.tribe-events-single-section.tribe-events-event-meta {
 			clear: both;
@@ -67,7 +67,7 @@
 				}
 				.tribe-events-content {
 					padding-right: 0px;
-					width: 60%;
+					//width: 60%;
 					//max-width: 60%;
 				}
 			}
