--- a/bhousesupport - newsite/css/style.css
+++ b/bhousesupport - newsite/css/style.css
@@ -60,6 +60,11 @@ input#nyp {
 label.screen-reader-text {
   display: none; }
 
+.product .wc-pao-addons-container .wc-pao-addon-container.wc-pao-addon p.form-row {
+  margin-top: 0px; }
+  .product .wc-pao-addons-container .wc-pao-addon-container.wc-pao-addon p.form-row input {
+    margin-bottom: 0px; }
+
 body.framed {
   margin-top: 0px !important; }
 
