--- a/bhousesupport - newsite/sass/partials/_settings.scss
+++ b/bhousesupport - newsite/sass/partials/_settings.scss
@@ -8,10 +8,12 @@ $facebook_blue: #3a589d;
 
 $bkgoundContent: #FFFFFF; //
 $menuBarbkg: #D14719; //
-$woodlawn-primary: #884935; // also set in theme options - red-brown (top bar, etc)
+//$woodlawn-primary: #884935; // OLD 
+$woodlawn-primary: #A6192E; // also set in theme options -new maroon.
 $woodlawn-secondary: #314c3e; // set in theme options // forest green;
 $woodlawn-tertiary: #eed7bc; // I made this one up. // lt orange
-$woodlawn-light-bkg: #F1E6D8; // light beige, color of masthead (also set in theme options)
+$woodlawn-light-bkg: #f9efde; // light beige, color of masthead (also set in theme options)
+//$woodlawn-light-bkg: #F1E6D8; // OLD
 $woodlawn-footer-font: #777;
 
 /* Typography ------------------------------------------ */
