--- a/bhousesupport1/sass/partials/_settings.scss
+++ b/bhousesupport1/sass/partials/_settings.scss
@@ -56,3 +56,15 @@ ul.header-nav-main { // only on maine menu
 a.wlm-button-right {
 	float: right;
 }
+
+.section.woodlawn-sched {
+	.row {
+		.col {
+			padding-bottom: 0px!important;
+			p {
+				margin-bottom: 0px!important;
+			}
+		}
+	}
+
+}
